--- a/LanguageMappingProvider/LanguageMappingProvider/LanguageMappingProvider.csproj
+++ b/LanguageMappingProvider/LanguageMappingProvider/LanguageMappingProvider.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18</TradosFolder>
+
 		<Company>RWS</Company>
 		<Authors>Trados AppStore Team</Authors>
 		<Product>Language Mapping Provider</Product>
@@ -35,6 +36,14 @@
 	<PropertyGroup>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+	  <NoWarn>1701;1702;IDE0290</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <NoWarn>1701;1702;IDE0290</NoWarn>
 	</PropertyGroup>
 
 </Project>
