--- a/SDLTranscreate/SDLTranscreate/Transcreate.csproj
+++ b/SDLTranscreate/SDLTranscreate/Transcreate.csproj
@@ -443,7 +443,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="PluginResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>PluginResources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
